Experiment touch events

--- a/app/views/gi_paint/ui/_ng_canvas.html
+++ b/app/views/gi_paint/ui/_ng_canvas.html
@@ -13,7 +13,7 @@
             id="gi-draw-canvas"
             width="640"
             height="480"
-            ng-touch="canvas.onTouch($event)"
+            gi-touch="canvas.onTouchmove(event)"
             ng-mousemove="canvas.onMousemove($event)"
             ng-mousedown="canvas.onMousedown($event)"
             ng-mouseup="canvas.onMouseup($event)"
