--- a/app/views/gi_paint/ui/_ng_canvas.html
+++ b/app/views/gi_paint/ui/_ng_canvas.html
@@ -13,7 +13,8 @@
             id="gi-draw-canvas"
             width="640"
             height="480"
-            gi-touch="canvas.onTouchmove(event)"
+            gi-touchmove="canvas.onTouchmove($event)"
+            gi-touchend="canvas.onTouchend($event)"
             ng-mousemove="canvas.onMousemove($event)"
             ng-mousedown="canvas.onMousedown($event)"
             ng-mouseup="canvas.onMouseup($event)"
