--- a/app/views/gi_paint/ui/_ng_canvas.html
+++ b/app/views/gi_paint/ui/_ng_canvas.html
@@ -1,6 +1,6 @@
 <div class="gi-canvas-container">
   <div>
-    {{ canvas.state.location.x }} x {{ canvas.state.location.y }}
+    {{ canvas.current.x }} x {{ canvas.current.y }}
   </div>
   <div id="gi-canvas-container">
     <canvas class="gi-canvas"
@@ -13,11 +13,11 @@
             id="gi-draw-canvas"
             width="640"
             height="480"
-            gi-touchmove="canvas.onTouchmove($event)"
-            gi-touchend="canvas.onTouchend($event)"
-            ng-mousemove="canvas.onMousemove($event)"
-            ng-mousedown="canvas.onMousedown($event)"
-            ng-mouseup="canvas.onMouseup($event)"
+            gi-touchmove="canvas.currentTool.onTouchmove($event)"
+            gi-touchend="canvas.currentTool.onTouchend($event)"
+            ng-mousemove="canvas.currentTool.onMousemove($event)"
+            ng-mousedown="canvas.currentTool.onMousedown($event)"
+            ng-mouseup="canvas.currentTool.onMouseup($event)"
             />
   </div>
 </div>
