--- a/app/views/layouts/gi_paint/engine.html.erb
+++ b/app/views/layouts/gi_paint/engine.html.erb
@@ -3,7 +3,7 @@
 <% end %>
 
 <% content_for :javascripts do %>
-  <%= javascript_include_tag  "gi_paint/engine" %>
+  <%= javascript_include_tag  "gi_paint/engine", defer: true %>
 <% end %>
 
 <% content_for :head do %>
